2006-09-07  Sam Steingold  <sds@podval.org>

	* ffi.tst: test FUNCTION-LAMBDA-EXPRESSION on a foreign function

2006-09-04  Sam Steingold  <sds@podval.org>

	* restarts.tst: do not use DOCUMENTATION 'FUNCTION on an
	un-fboundp symbol

2006-09-03  Sam Steingold  <sds@podval.org>

	* path.tst: check that make-pathname does not ignore explicit
	:DIRECTORY NIL (bug #[ 1550803 ])

2006-08-10  Sam Steingold  <sds@podval.org>

	* excepsit.tst: test ADJUST-ARRAY on non-adjustable vectors
	without a fill pointer

2006-07-27  Sam Steingold  <sds@podval.org>

	* iofkts.tst: check pprint-dispatch on built-in objects

2006-07-25  Sam Steingold  <sds@podval.org>

	* mop.tst: check that REINITIALIZE-INSTANCE calls
	FINALIZE-INHERITANCE [ 1526448 ]

2006-07-25  Sam Steingold  <sds@podval.org>

	* clos.tst: bug 1528201: (make-instance 'standard-class :name 3)

2006-07-20  Sam Steingold  <sds@podval.org>

	* loop.tst: added tests for initially/across interaction

2006-07-19  Sam Steingold  <sds@podval.org>

	* streams.tst: avoid a race condition in a file-write-date test

2006-07-19  Sam Steingold  <sds@podval.org>

	* ffi.tst, type.tst: fixed tests for #-unicode

2006-04-21  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add test against bug with make-instance cache after class
	redefinition.

2006-04-10  Bruno Haible  <bruno@clisp.org>

	* mop.tst: Check ability to specify a default method-combination on the
	generic-function class.

2006-03-22  Jörg Höhle  <hoehle@users.sourceforge.net>

	* strings.tst: Fix bug 1445842,
	ADJUST-ARRAY on 0-length adjustable string
	Reported by David Tolpin <dtolpin@users.sourceforge.net>

2006-03-06  Bruno Haible  <bruno@clisp.org>

	* backquot.tst: Add test for bug 1308444.
	Proposed by Matthew Cross <mcross@irobot.com>.

2006-03-01  Jörg Höhle  <hoehle@users.sourceforge.net>

	* macro8.tst [CLISP|CMUCL|SBCL]: destructuring-bind (() a b)
	matches (NIL 2 3)

2006-02-23  Sam Steingold  <sds@gnu.org>
