@@ -675,6 +675,7 @@
 <!ENTITY program-r '<replaceable>program</replaceable>'>
 <!ENTITY proto-r '<replaceable>protocol</replaceable>'>
 <!ENTITY real-r '<replaceable>real</replaceable>'>
+<!ENTITY rec-p '<replaceable>recursive-p</replaceable>'>
 <!ENTITY res-r '<replaceable>result</replaceable>'>
 <!ENTITY res-type-r '<replaceable>result-type</replaceable>'>
 <!ENTITY restart-clause-r '<replaceable>restart-clause</replaceable>'>
