@@ -1,3 +1,8 @@
+2006-09-09  Sam Steingold  <sds@podval.org>
+
+	* excepsit.tst: check that top-level READ with recursive-p=T
+	signals an error
+
 2006-09-07  Sam Steingold  <sds@podval.org>
 
 	* ffi.tst: test FUNCTION-LAMBDA-EXPRESSION on a foreign function
